# template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
config/: conan.cmake  installation.cmake  testing.cmake
docs/: maintainer.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/private/: main.cpp
src/bar/: CMakeLists.txt  main.cpp
src/foo/: CMakeLists.txt
src/foo/private/: math.cpp
src/foo/public/foo/: math.hpp
src/foo/tests/: add.cpp
src/foobar/: CMakeLists.txt
src/foobar/private/: bar.cpp
src/foobar/public/foo/: bar.hpp
